--- a/static/css/register.css
+++ b/static/css/register.css
@@ -3,7 +3,7 @@
     width: 80%;
     margin: 0 auto;
     padding: 0.5rem 1rem;
-    font-size: 1.5rem;
+    font-size: 1.2rem;
     border: none;
     border-radius: 2rem;
     color: #fff;
@@ -13,4 +13,18 @@
     clear: both;
     background: #42c02e;
     /* font-family: 宋体; */
+}
+
+.InputIcon {
+    position: absolute;
+    top: 0.5rem;
+    left: 18rem;
+}
+
+.FinputIcon {
+    display: none;
+}
+
+.TinputIcon {
+    display: none;
 }
