--- a/static/css/index.css
+++ b/static/css/index.css
@@ -37,42 +37,28 @@
     padding-left: 1rem;
 }
 
-.list-container {}
-
-.note-list {
-    margin: 0;
-    padding: 0;
-    list-style: none;
-    display: block;
-    margin-block-start: 1em;
-    margin-block-end: 1em;
-    margin-inline-start: 0px;
-    margin-inline-end: 0px;
-    padding-inline-start: 40px;
+.rotationChart {
+    margin-bottom: 3rem;
 }
 
-.note-list li {
-    position: relative;
-    width: 100%;
-    margin: 0 0 15px;
-    padding: 15px 2px 20px 0;
-    border-bottom: 1px solid #f0f0f0;
-    word-wrap: break-word;
-    line-height: 1rem;
-    display: list-item;
-    text-align: -webkit-match-parent;
+
+/* .list-container {} */
+
+.titleClass {
+    padding-bottom: 1rem;
+    ;
 }
 
-.note-list .title {
-    margin: -7px 0 20px;
-    display: inherit;
-    font-size: 1rem;
-    font-weight: 700;
-    line-height: 1rem;
+.titleClass a {
+    color: black;
 }
 
-.abstract {
+.content {
     font-size: 0.7rem;
-    color: #8d8787;
-    line-height: 1rem;
+    color: #999;
+    width: 70%;
+}
+
+.listImgClass {
+    margin: 1rem;
 }
