--- a/static/css/Entry.scss
+++ b/static/css/Entry.scss
@@ -1,19 +1,19 @@
 .el-container {
     // .imgBG {
-    >img {
+    img {
         width: 100%;
         height: 100%;
         position: absolute;
     }
-    // }
-    /*
-        *失败
-    */
-    // background-image: url(/../picture/logo.png);
-    // background-size: 100% 100%;
-    // width: 100%;
-    // z-index: 10;
-    // position: absolute;
+    .imgBox {
+        position: absolute;
+        top: 10%;
+        left: 10%;
+        background: url(/static/picture/logo.png);
+        background-size: 100% 100%;
+        width: 20%;
+        height: 10%;
+    }
 }
 
 .el-col-8:nth-child(2) {
@@ -28,15 +28,6 @@
         bottom: 3%;
     }
     background-image: radial-gradient(rgba(255, 255, 255, 1) 10%, rgba(255, 255, 255, 0));
-}
-
-.imgPosition {
-    display: inline-block;
-    margin-left: 5%;
-    img {
-        position: absolute;
-        z-index: 1;
-    }
 }
 
 .content {
