在vuex中添加用户名

--- a/static/css/components/header.scss
+++ b/static/css/components/header.scss
@@ -2,10 +2,18 @@
     float: left;
 }
 
-.head {
+.userHead {
     float: right;
 }
 
 .cancelText {
     text-decoration: none;
+}
+
+.myhead {
+    position: fixed;
+    top: 0;
+    right: 0;
+    left: 0;
+    z-index: 3;
 }
