--- a/static/css/components/layout.scss
+++ b/static/css/components/layout.scss
@@ -8,8 +8,8 @@
 
 .articleContainerBox {
     width: 100%;
-    height: 6rem;
-    font-size: 1rem;
+    height: 8rem;
+    font-size: 1.5rem;
     color: #999;
     padding-bottom: 1rem;
     // 允许长单词或地址换行到下一行
@@ -23,7 +23,7 @@
     }
     img {
         width: 20%;
-        // height: 20%;
+        //     // height: 20%;
     }
 }
 
