--- a/static/css/account.scss
+++ b/static/css/account.scss
@@ -1,4 +1,9 @@
 .setting_block{
-    padding: 50px;
+    margin: 30px;
+    padding: 30px;
     background-color: aqua;
+    height: 300px;
+}
+#setting_box{
+    width: 700px;
 }
