--- a/static/css/account.scss
+++ b/static/css/account.scss
@@ -4,6 +4,9 @@
     background-color: aqua;
     height: 300px;
 }
-#setting_box{
+.setting_box{
     width: 700px;
+}
+#submit_box{
+    margin-left: 50px;
 }
