--- a/static/css/writing.scss
+++ b/static/css/writing.scss
@@ -4,35 +4,21 @@
 .bg-purple-right {
   background: white;
   color: rgb(212, 212, 212);
-  font-size: 400%;
-  text-align: center;
-}
-.bg-purple-main {
-  background: #cccccc;
 }
 .bg-purple-left {
-  background: #4d4d4d;
-}
-.grid-content {
-  border-radius: 0px;
-  min-height: 100vh;
-  max-height: 100vh;
+  background: #f1f0f0;
 }
 .row-bg {
   background-color: #f9fafc;
 }
-.writing-button-box {
-  height: 15vh;
-}
 .writing-back-button {
-  background-color: #4d4d4d;
+  background-color: #f1f0f0;
   border: 4px solid #99ccff;
   color: #99ccff;
-  text-align: center;
   font-size: 80%;
   border-radius: 120px;
   width: 80%;
-  height: 50%;
+  height: 6vh;
   margin: 10% 0px 0px 10%;
   &:hover {border-color: rgb(204, 223, 241); border-width: 4px solid; }
 }
@@ -41,6 +27,7 @@
 }
 .navigation-buttons-Submission,.navigation-buttons-cancel{
   background: none;
+  border-color:#99ccff;
   margin-top:5%;
   width: 45%;
   height: 8%;
@@ -51,8 +38,8 @@
   height: 8%;
 }
 .el-menu-vertical-demo {
-  min-height: 79vh;
-  max-height: 79vh;
+  min-height: 85vh;
+  max-height: 85vh;
   width: 100%;
 }
 .writing-problem {
@@ -87,6 +74,7 @@
   width: 100%;
   margin-left:auto;
 }
-.writing-wangEditor{
+.writeArticle{
+  width: 40%;
   height: 100vh;
 }
