--- a/static/css/components/layout.scss
+++ b/static/css/components/layout.scss
@@ -1,3 +1,9 @@
+ul {
+    li {
+        overflow: hidden;
+    }
+}
+
 .articleTitleBox {
     font-size: 2rem;
     margin: 1rem 0;
@@ -22,8 +28,8 @@
         color: black;
     }
     img {
-        width: 20%;
-        //     // height: 20%;
+        width: 10%;
+        // height: 20%;
     }
 }
 
