--- a/static/css/writing.scss
+++ b/static/css/writing.scss
@@ -1,6 +1,3 @@
-.bg-purple-dark {
-  background: #99a9bf;
-}
 .bg-purple-right {
   background: white;
   color: rgb(212, 212, 212);
@@ -75,6 +72,17 @@
   margin-left:auto;
 }
 .writeArticle{
-  width:100%;
+  width: 40vh;
   height: 100vh;
+  float: left;
+}
+.wangEditorboxtow{
+  width: 129vh;
+  height: 100vh;
+  float: left;
+}
+.wangEditorboxone{
+  width: 169vh;
+  height: 100vh;
+  float: left;
 }
